# lipsync-kdtalker

./: .gitattributes  inference.py  pyproject.toml
dataset_process/: audio.py  croper.py  norm.npz
model/: __init__.py  model.py  model_utils.py  point_model.py
model/temporaltrans/: temptrans.py  transformer_utils.py
src/: live_portrait_pipeline.py  live_portrait_wrapper.py
src/config/: argument_config.py  crop_config.py  inference_config.py
src/modules/: dense_motion.py
src/utils/: helper.py  video.py
